Fixed signup & null user in images

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 	<head>
 		<title>Harjoitustyö</title>
@@ -9,6 +9,12 @@
 	<body>
 		<div>
 			<h1>imagestore</h1>
+			<div sec:authorize="isAuthenticated()">
+      			Authenticated as <span sec:authentication="name"></span><span sec:authentication="principal.authorities"></span>
+      			<form th:action="@{/logout}" method="POST">
+				<input type="submit" value="logout"/>
+			</form>
+      		</div>
 			<Table>
 				<thead>
 					<tr>
@@ -17,7 +23,7 @@
 				</thead>
 				<tbody>
 					<tr th:each="image:${images}">
-							<td><a th:href="@{'/images/'+${image.imageId}}"> <img style="width: 100px" th:src="@{'/download/'+${image.imageId}}" /></a></td>
+						<td><a th:href="@{'/images/'+${image.imageId}}"> <img style="width: 100px" th:src="@{'/download/'+${image.imageId}}" /></a></td>
 					</tr>
 				</tbody>
 			</Table>	
