CRUD methods for the rest

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,6 +38,8 @@
       </table>
       <a href="/upload">UPLOAD</a>
       <a href="/images"> images </a>
+      <a href="/users"> users </a>
+      <a href="/categories"> categories </a>
     </div>
   </body>
 </html>
