--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -17,31 +17,25 @@
           <a class="navInteraction" href="/categories"> categories </a>
           <a class="navInteraction upload" href="/upload">upload</a>
           <div class="navAuth" sec:authorize="isAuthenticated()">
-            Hello,&nbsp; 
+            Hello,&nbsp;
             <a th:href="@{|user/${#authentication.name}|}">
-            <span sec:authentication="name"></span></a> 
-            &nbsp;!
+            <span sec:authentication="name"></span></a> &nbsp;!
             <form th:action="@{/logout}" method="POST">
               <input class="navInteraction" type="submit" value="logout" />
             </form>
           </div>
           <div class="navAuth" sec:authorize="isAnonymous()">
             <a class="navInteraction" href="/login"> login </a>
-            <a class="navInteraction" href="/signup"> sign up </a>
           </div>
         </div>
       </nav>
       
-      <div th:object=${image}>
-          <div th:each="image:${images}">
-			<div>
-              <a th:href="@{'/images/'+${image.imageId}}">
-                <img
-                  style="width: 100px"
-                  th:src="@{'/download/'+${image.imageId}}"/></a>
-             </div>
-          </div>
-       </div>
+      <div th:object=${category}>
+		<h1 th:text="${category.categoryName}"></h1>
+      	<div th:each="image:${category.images}">
+      		<div><a th:href="@{'/images/'+${image.imageId}}"> <img style="width: 100px" th:src="@{'/download/'+${image.imageId}}" /></a></div>
+      	</div>
+      	</div>
     </div>
   </body>
 </html>
