--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -4,31 +4,46 @@
 	<head>
 		<title>Harjoitustyö</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}" />
 	</head>
 	
 	<body>
 		<div>
-			<h1><a th:href="@{'/'}"> imagestore </a></h1>
-			<div>
-				<h3>List of categories</h3>
-				<a href="/add/category"> NEW CATEGORY </a>
+		<nav class="navbar">
+        <h1><a th:href="@{'/'}"> imgstr </a></h1>
+        <div class="navLinkContainer">
+          <a class="navInteraction" href="/categories"> categories </a>
+          <a class="navInteraction upload" href="/upload">upload</a>
+          <div class="navAuth" sec:authorize="isAuthenticated()">
+            Hello,&nbsp; 
+            <a th:href="@{|user/${#authentication.name}|}">
+            <span sec:authentication="name"></span></a> 
+            &nbsp;!
+            <form th:action="@{/logout}" method="POST">
+              <input class="navInteraction" type="submit" value="logout" />
+            </form>
+          </div>
+          <div class="navAuth" sec:authorize="isAnonymous()">
+            <a class="navInteraction" href="/login"> login </a>
+            <a class="navInteraction" href="/signup"> sign up </a>
+          </div>
+        </div>
+      </nav>
+				<a sec:authorize="hasAuthority('ADMIN')" href="/add/category"> NEW CATEGORY </a>
 				<Table>
 					<thead>
 						<tr>
-							<th>Id</th>
 							<th>Name</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr th:each="category:${categories}">
-							<td th:text="${category.categoryId}" />
-							<td th:text="${category.categoryName}" />
-							<td><a th:href="@{'/edit/category/'+${category.categoryId}}"> EDIT </a></td>
-							<td><a th:href="@{'/delete/category/'+${category.categoryId}}"> DELETE </a></td>
+							<td><a th:text="${category.categoryName}" th:href="@{'/categories/'+${category.categoryId}}"></a> <td/>
+							<td><a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/edit/category/'+${category.categoryId}}"> EDIT </a></td>
+							<td><a sec:authorize="hasAuthority('ADMIN')" th:href="@{'/delete/category/'+${category.categoryId}}"> DELETE </a></td>
 						</tr>
 					</tbody>
 				</Table>
-			</div>
 		</div>
 	</body>
 </html>
