--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -18,30 +18,44 @@
           <a class="navInteraction upload" href="/upload">upload</a>
           <div class="navAuth" sec:authorize="isAuthenticated()">
             Hello,&nbsp; 
-            <a th:href="@{|user/${#authentication.name}|}">
-            <span sec:authentication="name"></span></a> 
-            &nbsp;!
+            <span sec:authentication="name"></span> &nbsp;!
             <form th:action="@{/logout}" method="POST">
               <input class="navInteraction" type="submit" value="logout" />
             </form>
           </div>
           <div class="navAuth" sec:authorize="isAnonymous()">
             <a class="navInteraction" href="/login"> login </a>
-            <a class="navInteraction" href="/signup"> sign up </a>
           </div>
         </div>
       </nav>
       
-      <div th:object=${image}>
-          <div th:each="image:${images}">
-			<div>
-              <a th:href="@{'/images/'+${image.imageId}}">
-                <img
-                  style="width: 100px"
-                  th:src="@{'/download/'+${image.imageId}}"/></a>
-             </div>
-          </div>
-       </div>
+      <div th:object=${user}>
+      <p>Name:&nbsp;<span th:text="${user.username}"></span></p>
+      <table>
+		<thead>
+			<tr>
+			  <th>Liked images:</th>
+			</tr>
+		  </thead>
+		  <tbody>
+			<tr th:each="image:${user.likedImages}">
+				<td><a th:href="@{'/images/'+${image.imageId}}"> <img style="width: 100px" th:src="@{'/download/'+${image.imageId}}" /></a></td>
+			</tr>
+		  </tbody>
+		</table>
+		<table>
+		<thead>
+			<tr>
+			  <th>Your images:</th>
+			</tr>
+		  </thead>
+		  <tbody>
+			<tr th:each="image:${user.images}">
+				<td><a th:href="@{'/images/'+${image.imageId}}"> <img style="width: 100px" th:src="@{'/download/'+${image.imageId}}" /></a></td>
+			</tr>
+		  </tbody>
+		</table>
+      </div>
     </div>
   </body>
 </html>
